Fix KRunner positioning on X11 with High DPI and Qt scaling on Plasma

When using Qt scaling, we want to adois mising scaled and unscaled
geometry spaces, as this leads to poitioning issues.

BUG: 422578
FIXED-IN: 5.19.2