krunner/main.cpp
@@ -40,10 +40,12 @@
 
 int main(int argc, char **argv)
 {
-    qunsetenv("QT_DEVICE_PIXEL_RATIO");
     QCommandLineParser parser;
-    QCoreApplication::setAttribute(Qt::AA_DisableHighDpiScaling);
     QCoreApplication::setAttribute(Qt::AA_DisableSessionManager);
+    if (!qEnvironmentVariableIsSet("PLASMA_USE_QT_SCALING")) {
+        qunsetenv("QT_DEVICE_PIXEL_RATIO");
+        QCoreApplication::setAttribute(Qt::AA_DisableHighDpiScaling);
+    }
 
     const bool qpaVariable = qEnvironmentVariableIsSet("QT_QPA_PLATFORM");
     KWorkSpace::detectPlatform(argc, argv);
